integration with user service, edit dtos and service